tests/files/type_checker_tests/should_pass/051.cmdr
//Test that ternary operations type check
x = if [true][0] then [true] else [false];
