tests/files/type_checker_tests/should_fail/093.cmdr
//Should fail if ternary items do not match
x = if true then true else 1;
